# s3watcher

./: .gitignore  README.md  pyproject.toml  requirements.txt
app/: main.py
app/api/: documents.py  webhook.py
app/core/: config.py  database.py
app/worker/: worker.py
tests/: test_download_and_ocr.py
