[project]
name = "supa-s3-watcher"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.133.1",
    "pydantic-settings>=2.13.1",
    "requests>=2.32.5",
    "supabase>=2.28.0",
    "uvicorn>=0.34.0",
    "httpx>=0.28.1",
    "python-multipart>=0.0.20",
]
